8152421: After initing the modality of a non-primary stage to MODAL, closing that stage causes the primary stage to become non-resizable

Reviewed-by: kcr, ddhill